fix timestamp spacing

--- a/css/app.styl
+++ b/css/app.styl
@@ -104,6 +104,7 @@ body
   .timestamp
     color: GRAY_LIGHT
     font-size: FONT_SIZE_SMALL
+    margin-left: (SPACING_SIZE / 2)
   .text
     margin-left: AVATAR_SIZE + SPACING_SIZE
     margin-top: 2px
